name:                skye-dsh
version:             0.1.0.0
synopsis:            Skye prototype based on DSH
license:             GPL-3
author:              Jan Stolarek
maintainer:          jan.stolarek@ed.ac.uk
category:            Database
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable skye-dsh
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       DSH == 0.13.0.1,
                       dsh-sql == 0.3.0.1,
                       HDBC,
                       HDBC-odbc,
                       data-default,
                       text,

                       -- JSTOLAREK: temporary dependencies for prototyping
                       containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
